--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/favicon.png"/>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="landing is-preload">
@@ -27,8 +28,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Programs</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="elements.html">Programs</a></li>
+											<li><a href="generic.html">Elements</a></li>
 										</ul>
 									</div>
 								</li>
@@ -59,9 +60,9 @@
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-envelope major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><a href="https://www.github.com/jameslee0" class="icon brands fa-github major style4" target="_blank"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/james-lee-0397a1177/" class="icon brands fa-linkedin major style4" target="_blank"><span class="label">Lorem</span></a></li>
+								<li><a href="mailto:jlee9@sdsu.edu" class="icon fa-envelope major style4"><span class="label">Ipsum</span></a></li>
 							</ul>
 						</div>
 					</section>
