--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">James Lee</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -54,15 +54,15 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+								<h2>About Me<br />
+								Graduating Fall 2021 from SDSU</h2>
+								<p>I am a passionate software developer looking to expand my knowledge and experience on mainly the backend.<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 							<ul class="icons major">
 								<li><a href="https://www.github.com/jameslee0" class="icon brands fa-github major style4" target="_blank"><span class="label">Github</span></a></li>
-								<li><a href="https://www.linkedin.com/in/james-lee-0397a1177/" class="icon brands fa-linkedin major style4" target="_blank"><span class="label">Lorem</span></a></li>
-								<li><a href="mailto:jlee9@sdsu.edu" class="icon fa-envelope major style4"><span class="label">Ipsum</span></a></li>
+								<li><a href="https://www.linkedin.com/in/james-lee-0397a1177/" class="icon brands fa-linkedin major style4" target="_blank"><span class="label">Linkedin</span></a></li>
+								<li><a href="mailto:jlee9@sdsu.edu" class="icon fa-envelope major style4"><span class="label">Email</span></a></li>
 							</ul>
 						</div>
 					</section>
