--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="elements.html">Programs</a></li>
-											<li><a href="generic.html">Elements</a></li>
 										</ul>
 									</div>
 								</li>
@@ -56,7 +54,7 @@
 							<header class="major">
 								<h2>About Me<br />
 								Graduating Fall 2021 from SDSU</h2>
-								<p>I am a passionate software developer looking to expand my knowledge and experience on mainly the backend.<br />
+								<p>I am a passionate software developer looking to expand my knowledge and experience on mainly backend.<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 							<ul class="icons major">
