--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>James Lee</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,6 +24,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
+											<li><a href="generic.html">Next Page</a></li>
+											<li><a href="elements.html">Elements Page</a></li>
 										</ul>
 									</div>
 								</li>
@@ -53,9 +51,10 @@
 						<div class="inner">
 							<header class="major">
 								<h2>About Me<br />
-								Graduating Fall 2021 from SDSU</h2>
+								Graduating Spring 2022 from SDSU</h2>
 								<p>I am a passionate software developer looking to expand my knowledge and experience on mainly backend.<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								I work hard and will always be looking out to learn and ask questions on things that I don't know. <br />
+							    Outside of coding I spend most of my time playing sports, working out, and socializing with my peers.</p>
 							</header>
 							<ul class="icons major">
 								<li><a href="https://www.github.com/jameslee0" class="icon brands fa-github major style4" target="_blank"><span class="label">Github</span></a></li>
@@ -108,7 +107,7 @@
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
+									<h3><a href="index.html">Mus Scelerisque</a></h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 								<li class="icon solid fa-headphones-alt">
