--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Next Page</a></li>
-											<li><a href="elements.html">Elements Page</a></li>
+											<li><a href="https://github.com/jameslee0">Github</a></li>
+											<li><a href="https://www.linkedin.com/in/james-lee-0397a1177/">LinkedIn</a></li>
 										</ul>
 									</div>
 								</li>
@@ -40,7 +40,7 @@
 							<p>Software Developer<br />
 							</p>
 							<ul class="actions special">
-								<li><a href="/resume/JamesLee_Resume.pdf" class="button primary" target="_blank">Resume</a></li>
+								<li><a href="/resume/Resume.pdf" class="button primary" target="_blank">Resume</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -67,75 +67,62 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/cushman.jpg" alt="" /></div><div class="content">
+								<h2>Cushman and Wakefield Data Analyst Intern</h2>
+								<p>Working under the Starck Team at Cushman and Wakefield, I designed python scripts to take in big data to analyze CRE trends and created a private website displaying building ownerships and services offered by the team. </p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/beanbagTest.png" alt="" /></div><div class="content">
+								<h2>BeanBag Inc. Software Engineer Intern</h2>
+								<p>I was able to be mentored by Christian Hammond who allowed me to intern at BeanBag. It was here where I learned to create widgets, maintain servers, and expand current existing programs. </p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/sdsutest.png" alt="" /></div><div class="content">
+								<h2>Computer Architecture TA</h2>
+								<p>I graded and taught 70+ students for an Upper Division Course at San Diego State University under Prof. Tao Xie. </p>
 							</div>
 						</section>
 					</section>
-
+					
 				<!-- Three -->
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Related Coursework, Certificates, and Programs</h2>
+								<p>Courses were taken at San Diego State University<br />
+								Certificates were obtained through Coursera </p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Artificial Intelligence</h3>
+									<p>Upper division class that taught the basics of Artificial Intelligence. The course emphasized machine learning algorithms, backtracking, and forward checking. </p>
 								</li>
 								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3><a href="/links/MachineLearningCert.pdf">Machine Learning Certificate</a></h3>
+									<p>Certificate was earned from completing a Stanford Coursera class regarding Machine Learning where we focused on creating testing and training models.</p>
 								</li>
 								<li class="icon solid fa-code">
-									<h3><a href="index.html">Mus Scelerisque</a></h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3><a href="https://github.com/jameslee0/DolphinClicks">Dolphin clicks Neural Network</a></h3>
+									<p>I created a neural network in my Artificial Intelligence class where we would find the difference between Riss Dolphins and North American Dolphins.</p>
 								</li>
 								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>OS Class</h3>
+									<p>This upper division class focused on learning how to code with semaphores, mutexes, and taught us how to properly make system calls.</p>
 								</li>
 								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3><a href="https://github.com/jameslee0/Covid-Risk-Detection">Covid Risk Detection</a></h3>
+									<p>Working together with other passionate students in the AI club at San Diego State we created a neural network program that would detect whether people were
+										wearing masks or staying 6 feet apart. 
+									</p>
 								</li>
 								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3><a href="https://github.com/jameslee0/Fire-Rescue-Game">Fire Rescue</a></h3>
+									<p>This 3D game was created at San Diego State University that depicts a rescue group that drives around the town picking up civilians that were affected by 
+										the fires. They were then taken to a safe zone where the player would then earn points for their brave behavior! They must finish before it's too late!
+									</p>
 								</li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-							</header>
-							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
