--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>James Lee</h2>
-							<p>Software Developer<br />
+							<p> Full Stack Software Engineer<br />
 							</p>
 							<ul class="actions special">
-								<li><a href="/resume/Resume.pdf" class="button primary" target="_blank">Resume</a></li>
+								<li><a id="buttons" href="/resume/James_s_Resume_Official.pdf" class="button primary" target="_blank">Resume</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -50,11 +50,23 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>About Me<br />
-								Graduating Spring 2022 from SDSU</h2>
-								<p>I am a passionate software developer looking to expand my knowledge and experience on mainly backend.<br />
-								I work hard and will always be looking out to learn and ask questions on things that I don't know. <br />
-							    Outside of coding I spend most of my time playing sports, working out, and socializing with my peers.</p>
+								<h2>About Me</h2>
+								<p  style="align-content: center;"> As a Full Stack Software Engineer, I thrive on turning complex problems into elegant solutions. <br />
+								My journey in software development has been driven by a passion for creating seamless user experiences while building robust, scalable systems from the ground up. <br />
+							    <br /> 
+									In my role as a full stack developer, I've had the opportunity to work across the entire tech stack, from crafting responsive front-end interfaces to architecting efficient back-end systems.
+									I believe in writing clean, maintainable code that not only works well today but can adapt to tomorrow's challenges. <br />
+									<br />
+									My technical toolkit includes modern JavaScipt frameworks such as Angular and React, cloud services, and database systems, allowing me to deliver end-to-end solutions that make a real impact.
+									Whether it's optimizing database queries, implementing security best practices, or ensuring pixel-perfect responsive designs, I enjoy diving deep into every aspect of the development process.
+								<br />
+								<br />
+									What excites me most about software engineering is the constant opportunity to learn and grow. Technology evolves rapidly, and I'm committed to staying at the forefront of industry best practices and emerging technologies.
+									When I'm not coding, you can find me contributing to open source projects, playing sports, or exploring new technologies that can enhance my development workflow. 
+								<br />
+								<br /> 
+									I'm always open to discussing new projects, technical challenges, or opportunities to collaborate. Feel free to reach out -- I'd love to connect and explore how we can work together to bring your ideas to life. 
+								</p>
 							</header>
 							<ul class="icons major">
 								<li><a href="https://www.github.com/jameslee0" class="icon brands fa-github major style4" target="_blank"><span class="label">Github</span></a></li>
@@ -67,21 +79,34 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/cushman.jpg" alt="" /></div><div class="content">
-								<h2>Cushman and Wakefield Data Analyst Intern</h2>
-								<p>Working under the Starck Team at Cushman and Wakefield, I designed python scripts to take in big data to analyze CRE trends and created a private website displaying building ownerships and services offered by the team. </p>
+							<div class="image"><img src="images/ziLogo.png" alt="" /></div><div class="content">
+								<h2>ZoomInfo Full Stack Engineer</h2>
+								<p> As a Full Stack Enginner, I built scalable Angular apps for 500K+ users, optimizing performance and cutting load times by 25%. 
+									I also optimized GraphQL and REST APIs, reduced payload sizes by 20%, and refactored monolithic systems into containerized microservices, 
+									reducing infrastructure costs by 35% on AWS/GCP.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image" ><img src="images/cushman.jpg" alt="" /></div><div class="content">
+								<h2>Cushman and Wakefield Data Analyst</h2>
+								<p>Working under the Starck Team at Cushman and Wakefield, I developed Python scripts and automated data pipelines to analyze large real estate datasets, 
+									uncovering key market trends and improving data accessibility. I also built a private web app to visualize ownership data and showcase team services, 
+									enhancing client presentations. </p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/beanbagTest.png" alt="" /></div><div class="content">
-								<h2>BeanBag Inc. Software Engineer Intern</h2>
-								<p>I was able to be mentored by Christian Hammond who allowed me to intern at BeanBag. It was here where I learned to create widgets, maintain servers, and expand current existing programs. </p>
+								<h2>BeanBag Inc. Software Engineer</h2>
+								<p>I contributed to the development of Review Board, an open-source code review tool, by fixing bugs, optimizing performance, and adding new features using  
+									Python, Django, and JS. I wrote unit and integration tests to improve reliability and increase test coverage. </p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/sdsutest.png" alt="" /></div><div class="content">
 								<h2>Computer Architecture TA</h2>
-								<p>I graded and taught 70+ students for an Upper Division Course at San Diego State University under Prof. Tao Xie. </p>
+								<p>As a Teaching Assistant for an upper division Computer Architecture class with over 70 students, I led weekly discussion sessions, 
+									clarified complex concepts, provided one-on-one support during office hours, and graded assignments and exams, ensuring fair and consistent evaluations 
+									while giving constructive feedback to help students improve. </p>
 							</div>
 						</section>
 					</section>
@@ -135,7 +160,7 @@
 							<li><a href="mailto:jlee9@sdsu.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>James Lee</li><li>Software Developer</a></li>
+							<li>James Lee</li><li>Full Stack Software Engineer</a></li>
 						</ul>
 					</footer>
 
