updated pdfs and email

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<p> Full Stack Software Engineer<br />
 							</p>
 							<ul class="actions special">
-								<li><a id="buttons" href="/resume/James_s_Resume_Official.pdf" class="button primary" target="_blank">Resume</a></li>
+								<li><a id="buttons" href="/resume/James_Official_Resume.pdf" class="button primary" target="_blank">Resume</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -71,7 +71,7 @@
 							<ul class="icons major">
 								<li><a href="https://www.github.com/jameslee0" class="icon brands fa-github major style4" target="_blank"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/james-lee-0397a1177/" class="icon brands fa-linkedin major style4" target="_blank"><span class="label">Linkedin</span></a></li>
-								<li><a href="mailto:jlee9@sdsu.edu" class="icon fa-envelope major style4"><span class="label">Email</span></a></li>
+								<li><a href="mailto:james.98.lee@gmail.com" class="icon fa-envelope major style4"><span class="label">Email</span></a></li>
 							</ul>
 						</div>
 					</section>
